[tool.poetry]
name = "interpolation"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.5.4"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
tabulate = "^0.8.7"



[tool.poetry.dev-dependencies]
PyQt5 = "5.12.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
